deleted:    templates/form1.html modified:   templates/madlibs/form1.html

--- a/templates/madlibs/form1.html
+++ b/templates/madlibs/form1.html
@@ -1,12 +1,5 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dragons</title>
-  </head>
+<html>
 
-  <body>
-    <<p>Test</p>
-  </body>
+<p>Test</p>
 
 </html>
