modified:   DC3/urls.py modified:   madlibs/forms.py new file:   madlibs/templates/madlibs/Form.html modified:   madlibs/templates/madlibs/form1.html modified:   madlibs/views.py

--- a/madlibs/templates/madlibs/form1.html
+++ b/madlibs/templates/madlibs/form1.html
@@ -1,5 +1,13 @@
 <html>
 
-<p>Test</p>
+<h1>Dragons:</h1>
+
+<p>
+  The {{ a }} Dragon is the {{ b }} Dragon of all.
+  It has {{ c }} {{ d }}, and a {{ e }} shaped like a {{ f }}.
+  It loves to eat {{ g }}, although it will feast on nearly anything.
+  It is {{ h }} and {{ i }}.
+  You must be {{ j }} around it, or you may end up as it`s meal!
+</p>
 
 </html>
