--- a/madlibs/templates/madlibs/lib1.html
+++ b/madlibs/templates/madlibs/lib1.html
@@ -7,7 +7,7 @@
   It has {{ c }} {{ d }}, and a {{ e }} shaped like a {{ f }}.
   It loves to eat {{ g }}, although it will feast on nearly anything.
   It is {{ h }} and {{ i }}.
-  You must be {{ j }} around it, or you may end up as it`s meal!
+  You must be {{ j }} around it, or you may end up as its meal!
 </p>
 
 </html>
