modified:   madlibs/templates/madlibs/lib1.html modified:   madlibs/templates/madlibs/lib2.html

--- a/madlibs/templates/madlibs/lib2.html
+++ b/madlibs/templates/madlibs/lib2.html
@@ -1,6 +1,6 @@
 <html>
 
-<h1>Sick Note:</h1>
+<h2>Sick Note:</h2>
 
 <p>
   Dear School Nurse:
@@ -9,7 +9,7 @@
   We have made an appointment with the {{ f }} Dr. {{ g }}, who studied for many years
   in {{ h }} and has {{ i }} degrees in pediatrics. He/she will send you all the information
   you need. Thank you!
-<br>Sincerely
+<br>Sincerely,
 <br>Mrs. {{ j }}.
 </p>
 
